objects/object_for_test_c__c.object
<CustomObject>
    <fields>
        <fullName>diz_checkbox__c</fullName>
        <defaultValue>true</defaultValue>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_checkbox__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>diz_email__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_email__c</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>diz_email_test__c</fullName>
        <description>test23</description>
        <inlineHelpText>help</inlineHelpText>
        <label>diz_email_test__c</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>diz_number__c</fullName>
        <label>diz_number__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_number_test__c</fullName>
        <label>diz_number_test__c</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_text__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_text__c</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>object_for_test_c</label>
    <nameField>
        <label>object_for_test_c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>objects_for_test_c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>